Primer perfil Card

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,3 +49,16 @@ nav a{
     color: #fff;
     text-decoration: none;
 }
+
+.perfil-card{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    grid-template: 22rem 4fr 1fr / auto;
+}
+
+.perfil-card:hover{
+    box-shadow: 0 0 6px #023047;
+}
+
+.publish-date{
+    color: #686869;
+}
