--- a/assets/css/media-query.css
+++ b/assets/css/media-query.css
@@ -34,7 +34,12 @@
   */
 
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-    /* CSS */
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 35rem);
+        row-gap: 15px;
+        column-gap: 15px;
+    }
 }
 
 
@@ -44,7 +49,12 @@
   */
 
 @media (min-width: 481px) and (max-width: 767px) {
-    /* CSS */
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 35rem);
+        row-gap: 15px;
+        column-gap: 15px;
+    }
 }
 
 
