--- a/assets/css/media-query.css
+++ b/assets/css/media-query.css
@@ -30,12 +30,6 @@
     h3 {
         font-size: 2.2rem;
     }
-    /* .grid-container {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 35rem);
-        row-gap: 15px;
-        column-gap: 15px;
-    } */
 }
 
 
@@ -45,12 +39,6 @@
   */
 
 @media (max-width: 768px) {
-    /* .grid-container {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 35rem);
-        row-gap: 15px;
-        column-gap: 15px;
-    } */
     nav a {
         font-size: 2.3rem;
     }
@@ -63,14 +51,7 @@
     }
 }
 
-@media (max-width: 640px) {
-    /* .grid-container {
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-        row-gap: 15px;
-        column-gap: 15px;
-    } */
-}
+@media (max-width: 640px) {}
 
 
 /* 
