--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,7 +44,7 @@ p {
 }
 
 .site-header {
-    background-image: url(../img/header.jpg);
+    background-image: url(../img/header.png);
     min-height: 60rem;
 }
 
@@ -65,4 +65,10 @@ nav a {
 
 .publish-date {
     color: #686869;
+}
+
+.footer{
+    background-color: #333;
+    width: 100%;
+    height: 500px;
 }
