--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,6 +38,8 @@ p {
     font-weight: 400;
 }
 
+
+
 .contenedor {
     max-width: 89%;
     margin: 0 auto;
@@ -67,8 +69,26 @@ nav a {
     color: #686869;
 }
 
+.bg-grey{
+    background-color: #333;
+}
+
 .footer{
     background-color: #333;
     width: 100%;
-    height: 500px;
+    
+}
+
+.border{
+    border: 1px solid black;
+}
+
+.experience-btn{
+    border: 1px solid white;
+    margin: 2rem 0;
+
+}
+
+#experience-description, #btns-div{
+    height: 35rem;
 }
